--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <table style="width: 980px;">
 <tr>
 <td rowspan="15" width="250px">
-<img src="a.jpg" width="250px" height="420px"/>
+<img src="me3.jpg" width="250px" height="420px"/>
 </td>
 </tr>
 <tr>
